# fraud-detection-transfer-system

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init-db.sql  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: auth.py  fraud.py  transfers.py
app/core/: config.py  database.py  middleware.py  redis_client.py
app/models/: fraud.py  transfer.py  user.py
app/schemas/: auth.py  transfer.py  user.py
kubernetes/: configmap.yaml  namespace.yaml
scripts/: performance_test.py
